--- a/assignment-1-html-css/css/index.css
+++ b/assignment-1-html-css/css/index.css
@@ -1,9 +1,150 @@
+body {
+	font-family: sans-serif;
+}
+
 #bg {
   text-align: center;
   position: absolute;
-  background-color: red;
+  background-color: #db3d3d;
   height: 90vh;
   width: 95vw;
-  margin: 2% 2% 2% 2%;
-  border-radius: 5px;
+  margin-top: 2%;
+  margin-left: 2%;
+  border-radius: 10px;
+}
+
+#mid {
+  text-align: center;
+  position: absolute;
+  background-color: #1374e8;
+  background-image: linear-gradient(0deg, #f9f1f1 50%, #3377ff 50%);
+  height: 580px;
+  width: 700px;
+  margin-top: 5%;
+  margin-left: 25%;
+  border-radius: 10px;
+  min-height: 400px;
+  min-width: 250px;
+}
+
+#in {
+  text-align: center;
+  position: relative;
+  background-color: #ffffff;
+  height: 300px;
+  width: 400px;
+  margin-top: 2%;
+  margin-left: 22%;
+  border-radius: 10px;
+  min-height: 300px;
+  min-width: 400px;
+  box-shadow: 4px 4px 10px grey;
+}
+
+#em {
+  text-align: left;
+  position: relative;
+  border: none;
+  height: 35px;
+  width: 280px;
+  font-size: 20px;
+  font-weight: 100px;
+  border-bottom: 2px solid #3377ff;
+  background-color: #ffffff;
+  padding: 4px 4px 1px 4px;
+  margin: 20px 10px 10px 10px;
+
+  /*box-shadow: 4px 4px 10px grey;*/
+}
+
+#pass {
+  text-align: left;
+  position: relative;
+  border: none;
+  height: 35px;
+  width: 280px;
+  font-size: 20px;
+  font-weight: 100px;
+  border-bottom: 2px solid #3377ff;
+  background-color: #ffffff;
+  padding: 4px 4px 1px 4px;
+  margin: 10px 10px 5px 10px;
+
+  /*box-shadow: 4px 4px 10px grey;*/
+}
+
+::placeholder {
+  color: lightgrey;
+}
+
+#popup {
+	height: 5vh;
+	width: 90vw;
+	background-color: #3377ff;
+	color: white;
+	text-align: center;
+	padding: 12px 10px 10px 10px;
+	font-weight: 10px;
+	font-size: 27px;
+	border-radius: 10px;
+	margin: 2% 3% 0% 4%;
+}
+
+.img {
+	float: center;
+	height: 150px;
+	width: 200px;
+	margin-top: 4%;
+	margin-bottom: 1%;
+}
+
+p {
+	text-align: center;
+	font-weight: 10px;
+	font-size: 27px;
+	color: white;
+	margin-bottom: 1%;
+	margin-top: 1%;
+}
+
+#login {
+  text-align: center;
+  background-color: #3377ff;
+  font-size: 18px;
+  font-weight: 100px;
+  font-family: sans-serif;	
+  color: white;
+  height: 35px;
+  width: 290px;
+  border-radius: 10px;
+  margin-bottom: 2%;
+}
+
+.remember {
+	float: left;
+	font-size: 15px;
+	margin: 0% auto 10% 2%;
+	padding-bottom: 2px;
+	color: grey;
+}
+
+.forgot {
+	float: right;
+	font-size: 15px;
+	margin: 0% 14% 10% auto;
+	padding-bottom: 2px;
+	color: grey;
+}
+
+.newacc {
+	/*float: left;*/
+	font-size: 15px;
+	margin: 8% 14% 10% 14%;
+	text-align: center;
+	color: #3377ff;
+}
+
+#rem {
+	float: left;
+    margin: 0.7% auto 10% 14%;
 }
